# mia

./: .gitignore  .travis.yml  Cargo.toml
src/error/: Cargo.toml
src/error/src/: lib.rs  span.rs
src/ir/: Cargo.toml
src/ir/src/: builder.rs  codegen.rs  display.rs  lib.rs  types.rs
src/ir/src/grammar/: iter.rs  mod.rs
src/lower_ast/: Cargo.toml
src/lower_ast/src/: lib.rs
src/mia_codegen/: Cargo.toml
src/mia_ir/: Cargo.toml
src/mia_ir/src/: error.rs  lib.rs
src/mia_ir/src/ir/: builder.rs  func.rs  instruction.rs  mod.rs  module.rs  scope.rs  stmt.rs  traits.rs  type_value.rs  value.rs
src/mia_ir/tests/: compile_ast_smoke_tests.rs
src/mia_syntax/: Cargo.toml
src/mia_syntax/src/: ast.rs  lib.rs  parser.rs
src/mia_syntax/src/ast/: mod.rs  pass.rs  visit.rs
src/mia_syntax/tests/: common.rs  syntax_test.rs
src/mia_syntax/tests/samples/: arithmetic.mia  fib.mia
src/syntax/: Cargo.toml
src/syntax/src/: lex.rs  lib.rs
src/syntax/src/parser/: mod.rs  prec_group.rs
src/tools/demo/: Cargo.toml
src/tools/demo/src/: main.rs
src/tools/mia_ast/: Cargo.toml
src/tools/mia_ast/src/: main.rs
src/tools/miac/: Cargo.toml
src/tools/miac/src/: main.rs
