[package]
name = "ir"
authors = ["Jeremy Schwartz <j.schwartz564@icloud.com>"]
version = "0.0.1-alpha"
edition = "2018"

[lib]
name = "ir"

[dependencies]
error = { path = "../error" }
itertools = "0.9"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }

[dev-dependencies]
